[gd_scene load_steps=23 format=3 uid="uid://npgu6dlck14g"]

[ext_resource type="Texture2D" uid="uid://chibfucy2hc18" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/idle.png" id="1_0bwsm"]
[ext_resource type="Script" path="res://scripts/soldier.gd" id="1_kp8tr"]
[ext_resource type="Texture2D" uid="uid://7dg03c58v3xb" path="res://Assets/Sewers pack files/Sewers pack files/Spritesheets/water-splash.png" id="3_j8auc"]
[ext_resource type="Texture2D" uid="uid://b2pr7yu3exkrn" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/hurt.png" id="4_8n701"]
[ext_resource type="Texture2D" uid="uid://do4kh27jh7ruc" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/run/run-export1.png" id="4_8w4lk"]
[ext_resource type="Texture2D" uid="uid://btb538up1c1we" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/run/run-export2.png" id="5_ly8k4"]
[ext_resource type="Texture2D" uid="uid://d3itul2h40ujw" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/run/run-export3.png" id="6_k5tip"]
[ext_resource type="Texture2D" uid="uid://rkme2tppt2yu" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/run/run-export4.png" id="7_15hh8"]
[ext_resource type="Texture2D" uid="uid://pkjg6qvyhqf" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/run/run-export5.png" id="8_ribxw"]
[ext_resource type="Texture2D" uid="uid://pvhah5q2yrg5" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/run/run-export6.png" id="9_dydjf"]
[ext_resource type="Texture2D" uid="uid://cw7werelt4xut" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/hurt2.png" id="11_qief1"]
[ext_resource type="Texture2D" uid="uid://02d6w4fnsv1w" path="res://Assets/Sewers pack files/Sewers pack files/Sprites/Soldier/hurt3.png" id="12_uxieb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kpj3"]
size = Vector2(20, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqq6e"]
atlas = ExtResource("3_j8auc")
region = Rect2(0, 0, 48, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axbc1"]
atlas = ExtResource("3_j8auc")
region = Rect2(48, 0, 48, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyxua"]
atlas = ExtResource("3_j8auc")
region = Rect2(96, 0, 48, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j4yq"]
atlas = ExtResource("3_j8auc")
region = Rect2(144, 0, 48, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pulxl"]
atlas = ExtResource("3_j8auc")
region = Rect2(192, 0, 48, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_o7pus"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8n701")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqq6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axbc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyxua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j4yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pulxl")
}],
"loop": false,
"name": &"Death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0bwsm")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8w4lk")
}, {
"duration": 1.0,
"texture": ExtResource("5_ly8k4")
}, {
"duration": 1.0,
"texture": ExtResource("6_k5tip")
}, {
"duration": 1.0,
"texture": ExtResource("7_15hh8")
}, {
"duration": 1.0,
"texture": ExtResource("8_ribxw")
}, {
"duration": 1.0,
"texture": ExtResource("9_dydjf")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8n701")
}, {
"duration": 1.0,
"texture": ExtResource("11_qief1")
}, {
"duration": 1.0,
"texture": ExtResource("12_uxieb")
}],
"loop": true,
"name": &"stunned",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tec65"]
radius = 440.028

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cp7k2"]
size = Vector2(9, 13.8308)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vl0hj"]
size = Vector2(10.1334, 31.0863)

[node name="Soldier" type="CharacterBody2D"]
script = ExtResource("1_kp8tr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3kpj3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_o7pus")
animation = &"Death"
frame = 5
frame_progress = 1.0

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_tec65")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0.5, -19)
scale = Vector2(1, 1.01223)
shape = SubResource("RectangleShape2D_cp7k2")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(2.38419e-07, 7.5)
scale = Vector2(2.36841, 1.19023)
shape = SubResource("RectangleShape2D_vl0hj")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
